# vad

./: .dockerignore  .envrc  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt  shell.nix
vad/: __init__.py  __main__.py
